commit to changes

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             <button class="copy-btn" >Click For This 👆</button>
         </div> -->
     </div>
+    <footer>
+        <h1 id="author">Want to know Author Name ?</h1>
+        <button class="foot-btn" onclick="getAuthor()">Click Here 👇</button>
+    </footer>
     <script src="index.js"></script>
 </body>
 </html>
